05/18/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Moved logic for the file chooser dialogs to a new jsxeFileDialog class

05/17/2004  version 0.2 beta    Ian Lewis <IanLewis@member.fsf.org>

    * Code fixed for version 0.2 beta
    * changed version naming scheme. Development versions are now the next
      major.minor version with a preXX at the end (eg. 0.2 pre75). Mostly done
      so it's easier to put the version in the build file and have it make
      sense for beta/stable releases.

05/16/2004  version 0.1.75  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed many bugs in the DefaultViewTreeModel, DefaultViewTree,
      DefaultViewTreeNode, and AdapterNode
    * Added code to remember the expanded states of nodes after they are
      dragged and dropped into other nodes

05/15/2004  version 0.1.74  Ian Lewis <IanLewis@member.fsf.org>

    * Added xsd files to the file filters when opening a document.

05/14/2004  version 0.1.73  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the DOMSerializer to implement the newest version
      of the LSSerializer interface. jsXe requires Xerces 2.6.2.
    * Updated how the splitpane locations are set up. The look better now and
      and set themselves to a percentage of the window size as a starting
      value.

05/13/2004  version 0.1.72  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the displaying of nodes in the tree. The algorithm
      That desides if a node is to be displayed caused null pointer exceptions
      to be thrown.
    * Fixed various bugs. Moved logic for opening save dialogs to the
      DocumentBuffer class.
    * Fixed a bug in the inserting of nodes in the DefaultViewTreeNode class
      The setParent method wasn't setting the correct parent.

05/07/2004  version 0.1.71  Ian Lewis <IanLewis@member.fsf.org>

    * Added a layer between the AdapterNode and the GUI. The DefaultViewTreeNode